Fix basket autolayout

--- a/Basket-Donation-Payments/Basket-Donation-Payments/Base.lproj/Main.storyboard
+++ b/Basket-Donation-Payments/Basket-Donation-Payments/Base.lproj/Main.storyboard
@@ -427,7 +427,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AAw-Hb-Otn">
-                                        <rect key="frame" x="0.0" y="-44" width="414" height="1000"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="#BlackLivesMatter" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19a-t0-mUs">
                                                 <rect key="frame" x="45" y="60" width="297.5" height="41"/>
@@ -523,8 +523,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="AAw-Hb-Otn" firstAttribute="trailing" secondItem="huB-iq-yog" secondAttribute="trailing" id="3HQ-nu-YaD"/>
+                                    <constraint firstItem="AAw-Hb-Otn" firstAttribute="top" secondItem="1Mh-Ct-HNJ" secondAttribute="top" id="cvH-rK-hWF"/>
                                     <constraint firstItem="AAw-Hb-Otn" firstAttribute="leading" secondItem="huB-iq-yog" secondAttribute="leading" id="kp2-b1-uF2"/>
-                                    <constraint firstItem="AAw-Hb-Otn" firstAttribute="top" secondItem="huB-iq-yog" secondAttribute="top" id="t7B-x7-qn1"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="eDr-tf-zdN"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="huB-iq-yog"/>
@@ -546,11 +546,11 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="1Mh-Ct-HNJ" firstAttribute="top" secondItem="QNm-rQ-CK8" secondAttribute="top" id="QBi-0B-XZZ"/>
+                            <constraint firstItem="pHt-kI-WG7" firstAttribute="bottom" secondItem="1Mh-Ct-HNJ" secondAttribute="bottom" id="0qJ-ix-TSS"/>
+                            <constraint firstItem="pHt-kI-WG7" firstAttribute="top" secondItem="1Mh-Ct-HNJ" secondAttribute="top" id="Neh-Uc-SHN"/>
                             <constraint firstItem="pHt-kI-WG7" firstAttribute="bottom" secondItem="QF6-0f-pbu" secondAttribute="bottom" constant="50" id="U4j-X2-oRd"/>
                             <constraint firstItem="1Mh-Ct-HNJ" firstAttribute="trailing" secondItem="pHt-kI-WG7" secondAttribute="trailing" id="cNM-5T-WVi"/>
                             <constraint firstItem="pHt-kI-WG7" firstAttribute="trailing" secondItem="QF6-0f-pbu" secondAttribute="trailing" constant="40" id="fcP-G2-mIP"/>
-                            <constraint firstAttribute="bottom" secondItem="1Mh-Ct-HNJ" secondAttribute="bottom" id="fzg-lM-F0g"/>
                             <constraint firstItem="QF6-0f-pbu" firstAttribute="leading" secondItem="pHt-kI-WG7" secondAttribute="leading" constant="30" id="g8A-dt-h8S"/>
                             <constraint firstItem="1Mh-Ct-HNJ" firstAttribute="leading" secondItem="pHt-kI-WG7" secondAttribute="leading" id="krp-9k-ZnF"/>
                         </constraints>
